# mirket-chat

./: .gitignore  README.md
assets/: README.md
assets/desktop/: icon.ico.stoat-orig  icon.png.stoat-orig  icon@2x.png.stoat-orig  icon@3x.png.stoat-orig  iconTemplate.png.stoat-orig
assets/desktop/badges/: badges.penpot
assets/web/: android-chrome-192x192.png.stoat-orig  android-chrome-512x512.png.stoat-orig  icon.ico.stoat-orig  masking-512x512.png.stoat-orig  monochrome.svg.stoat-orig  wordmark.svg.stoat-orig
backend/: CHANGELOG.md  Cargo.toml  README.md  compose.yml  release-please-config.json
backend/.github/ISSUE_TEMPLATE/: bug.yml
backend/.github/workflows/: git-town.yml  release-please.yml
backend/.mise/: config.toml
backend/.mise/tasks/: build
backend/.mise/tasks/docker/: start
backend/crates/bonfire/: Cargo.toml
backend/crates/bonfire/src/: websocket.rs
backend/crates/bonfire/src/events/: impl.rs  state.rs
backend/crates/core/coalesced/: Cargo.toml
backend/crates/core/config/: Cargo.toml  Revolt.toml
backend/crates/core/config/src/: lib.rs
backend/crates/core/database/: Cargo.toml
backend/crates/core/database/src/amqp/: amqp.rs
backend/crates/core/database/src/drivers/: mod.rs
backend/crates/core/database/src/events/: client.rs  rabbit.rs
backend/crates/core/database/src/models/channels/: model.rs
backend/crates/core/database/src/models/emojis/: model.rs  ops.rs  unicode_emoji.txt
backend/crates/core/database/src/models/emojis/ops/: mongodb.rs  reference.rs
backend/crates/core/database/src/models/file_hashes/: model.rs  ops.rs
backend/crates/core/database/src/models/file_hashes/ops/: mongodb.rs  reference.rs
backend/crates/core/database/src/models/files/: model.rs
backend/crates/core/database/src/models/messages/: ops.rs
backend/crates/core/database/src/models/messages/ops/: mongodb.rs  reference.rs
backend/crates/core/database/src/models/server_members/: model.rs
backend/crates/core/database/src/models/servers/: model.rs
backend/crates/core/database/src/models/servers/ops/: mongodb.rs
backend/crates/core/database/src/models/users/: model.rs
backend/crates/core/database/src/tasks/: ack.rs
backend/crates/core/database/src/util/: acker.rs  mod.rs
backend/crates/core/database/src/util/bridge/: v0.rs
backend/crates/core/database/src/voice/: mod.rs  voice_client.rs
backend/crates/core/files/: Cargo.toml
backend/crates/core/files/src/: lib.rs
backend/crates/core/files/src/implementation/: media_impl.rs
backend/crates/core/files/src/repositories/: media_repository.rs
backend/crates/core/models/: Cargo.toml
backend/crates/core/models/src/v0/: channels.rs  emojis.rs  files.rs  messages.rs  server_bans.rs  servers.rs
backend/crates/core/parser/: Cargo.toml
backend/crates/core/parser/src/: lib.rs
backend/crates/core/permissions/: Cargo.toml
backend/crates/core/permissions/src/models/: channel.rs
backend/crates/core/presence/: Cargo.toml
backend/crates/core/ratelimits/: Cargo.toml
backend/crates/core/result/: Cargo.toml
backend/crates/core/result/src/: axum.rs  lib.rs  rocket.rs
backend/crates/daemons/crond/: Cargo.toml  Dockerfile
backend/crates/daemons/crond/src/: main.rs
backend/crates/daemons/crond/src/tasks/: acks.rs  mod.rs
backend/crates/daemons/pushd/: Cargo.toml
backend/crates/daemons/pushd/src/: main.rs
backend/crates/daemons/pushd/src/consumers/inbound/: dm_call.rs  fr_accepted.rs  fr_received.rs  generic.rs  mass_mention.rs  message.rs
backend/crates/daemons/pushd/src/consumers/outbound/: fcm.rs
backend/crates/daemons/pushd/src/utils/: mod.rs  renderer.rs
backend/crates/daemons/voice-ingress/: Cargo.toml
backend/crates/daemons/voice-ingress/src/: api.rs
backend/crates/delta/: Cargo.toml
backend/crates/delta/src/: main.rs
backend/crates/delta/src/routes/: mod.rs  root.rs
backend/crates/delta/src/routes/bots/: delete.rs  edit.rs  fetch.rs
backend/crates/delta/src/routes/channels/: channel_ack.rs  channel_delete.rs  channel_edit.rs  group_remove_member.rs  message_bulk_delete.rs  message_send.rs  voice_join.rs  voice_stop_ring.rs  webhook_create.rs
backend/crates/delta/src/routes/customisation/: emoji_create.rs  emoji_edit.rs  mod.rs
backend/crates/delta/src/routes/servers/: ban_create.rs  member_edit.rs  member_fetch.rs  member_remove.rs  roles_edit.rs  server_ack.rs  server_create.rs  server_delete.rs  server_edit.rs
backend/crates/delta/src/routes/webhooks/: mod.rs  webhook_delete_message.rs  webhook_edit_message.rs  webhook_execute_github.rs
backend/crates/services/autumn/: Cargo.toml
backend/crates/services/autumn/src/: api.rs  exif.rs  main.rs  metadata.rs  utils.rs
backend/crates/services/gifbox/: Cargo.toml
backend/crates/services/january/: Cargo.toml
backend/crates/services/january/src/: requests.rs  website_embed.rs
backend/docs/: README.md
backend/docs/docs/: help.md
backend/docs/docs/developers/: endpoints.md
backend/docs/docs/developers/events/: protocol.md
backend/docs/docs/developing/: contrib.md
backend/docs/docs/developing/backend/: new_features.md
desktop/: .gitmodules  .prettierrc  CHANGELOG.md  LICENSE  README.md  chat.mirket.MirketDesktop.desktop  chat.mirket.MirketDesktop.metainfo.xml  default.nix  forge.config.ts  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
desktop/.github/workflows/: build.yml  release-please.yml
desktop/src/: config.d.ts  main.ts  preload.ts  renderer.ts
desktop/src/native/: autoLaunch.ts  badges.ts  config.ts  discordRpc.ts  tray.ts  window.ts
desktop/src/world/: config.ts  (+1 more)
self-hosted/: .env.example  .env.web.example  .gitignore  LICENSE  README.md  compose.yml  generate_config.sh  secrets.env.example
self-hosted/migrations/: 20260218-voice-config.sh
web/: .gitmodules  .prettierignore  .prettierrc  GUIDELINES.md  LICENSE  README.md  default.nix  eslint.config.mjs  package.json  pnpm-workspace.yaml
web/doc/: book.toml
web/docker/: package.json
web/lifecycle/: generateEmojiMapping.ts  migrateTranslations.ts  syncOpenProject.ts
(+27 files in other folders)
