[package]
name = "revolt-files"
version = "0.12.1"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: S3 and encryption subroutines"
repository = "https://github.com/stoatchat/stoatchat"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

ffprobe = { workspace = true }
imagesize = { workspace = true }
tempfile = { workspace = true }

base64 = { workspace = true }
aes-gcm = { workspace = true }
typenum = { workspace = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }

revolt-config = { workspace = true, features = [
    "report-macros",
] }
revolt-result = { workspace = true }

# image processing
jxl-oxide = { workspace = true, features = ["image"] }
image = { workspace = true }

# svg rendering
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }

# encoding
webp = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
